tests/baselines/reference/templateLiteralEscapeSequence(target=es3).errors.txt
tests/cases/compiler/templateLiteralEscapeSequence.ts(5,4): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(6,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(7,6): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(8,7): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(10,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(11,11): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
tests/cases/compiler/templateLiteralEscapeSequence.ts(12,4): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(13,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(15,8): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(16,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(17,10): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(18,11): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(20,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(21,15): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
tests/cases/compiler/templateLiteralEscapeSequence.ts(22,8): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(23,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(25,4): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(26,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(27,6): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(28,7): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(30,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(31,11): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
tests/cases/compiler/templateLiteralEscapeSequence.ts(32,4): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(33,5): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(35,8): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(36,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(37,10): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(38,11): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(40,9): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(41,15): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
tests/cases/compiler/templateLiteralEscapeSequence.ts(42,8): error TS1125: Hexadecimal digit expected.
tests/cases/compiler/templateLiteralEscapeSequence.ts(43,9): error TS1125: Hexadecimal digit expected.


==== tests/cases/compiler/templateLiteralEscapeSequence.ts (32 errors) ====
    declare function tag(template: TemplateStringsArray, ...substitutions: any[]): string;
    
    "use strict";
    
    `\u`;
       
!!! error TS1125: Hexadecimal digit expected.
    `\u0`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\u00`;
         
!!! error TS1125: Hexadecimal digit expected.
    `\u000`;
          
!!! error TS1125: Hexadecimal digit expected.
    `\u0000`;
    `\u{}`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\u{ffffff}`;
              
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    `\x`;
       
!!! error TS1125: Hexadecimal digit expected.
    `\x0`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\x00`;
    `${0}\u`;
           
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u0`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u00`;
             
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u000`;
              
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u0000`;
    `${0}\u{}`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u{ffffff}`;
                  
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    `${0}\x`;
           
!!! error TS1125: Hexadecimal digit expected.
    `${0}\x0`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\x00`;
    `\u${0}`;
       
!!! error TS1125: Hexadecimal digit expected.
    `\u0${0}`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\u00${0}`;
         
!!! error TS1125: Hexadecimal digit expected.
    `\u000${0}`;
          
!!! error TS1125: Hexadecimal digit expected.
    `\u0000${0}`;
    `\u{}${0}`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\u{ffffff}${0}`;
              
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    `\x${0}`;
       
!!! error TS1125: Hexadecimal digit expected.
    `\x0${0}`;
        
!!! error TS1125: Hexadecimal digit expected.
    `\x00${0}`;
    `${0}\u${0}`;
           
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u0${0}`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u00${0}`;
             
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u000${0}`;
              
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u0000${0}`;
    `${0}\u{}${0}`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\u{ffffff}${0}`;
                  
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
    `${0}\x${0}`;
           
!!! error TS1125: Hexadecimal digit expected.
    `${0}\x0${0}`;
            
!!! error TS1125: Hexadecimal digit expected.
    `${0}\x00${0}`;
    
    tag`\u`;
    tag`\u0`;
    tag`\u00`;
    tag`\u000`;
    tag`\u0000`;
    tag`\u{}`;
    tag`\u{ffffff}`;
    tag`\x`;
    tag`\x0`;
    tag`\x00`;
    tag`${0}\u`;
    tag`${0}\u0`;
    tag`${0}\u00`;
    tag`${0}\u000`;
    tag`${0}\u0000`;
    tag`${0}\u{}`;
    tag`${0}\u{ffffff}`;
    tag`${0}\x`;
    tag`${0}\x0`;
    tag`${0}\x00`;
    tag`\u${0}`;
    tag`\u0${0}`;
    tag`\u00${0}`;
    tag`\u000${0}`;
    tag`\u0000${0}`;
    tag`\u{}${0}`;
    tag`\u{ffffff}${0}`;
    tag`\x${0}`;
    tag`\x0${0}`;
    tag`\x00${0}`;
    tag`${0}\u${0}`;
    tag`${0}\u0${0}`;
    tag`${0}\u00${0}`;
    tag`${0}\u000${0}`;
    tag`${0}\u0000${0}`;
    tag`${0}\u{}${0}`;
    tag`${0}\u{ffffff}${0}`;
    tag`${0}\x${0}`;
    tag`${0}\x0${0}`;
    tag`${0}\x00${0}`;
    
    tag`0${00}`;
    tag`0${05}`;
    tag`0${000}`;
    tag`0${005}`;
    tag`0${055}`;
    tag`${00}0`;
    tag`${05}0`;
    tag`${000}0`;
    tag`${005}0`;
    tag`${055}0`;
    tag`\0`;
    tag`\5`;
    tag`\00`;
    tag`\05`;
    tag`\55`;
    tag`\000`;
    tag`\005`;
    tag`\055`;
    tag`${0}\0`;
    tag`${0}\5`;
    tag`${0}\00`;
    tag`${0}\05`;
    tag`${0}\55`;
    tag`${0}\000`;
    tag`${0}\005`;
    tag`${0}\055`;
    tag`\0${0}`;
    tag`\5${0}`;
    tag`\00${0}`;
    tag`\05${0}`;
    tag`\55${0}`;
    tag`\000${0}`;
    tag`\005${0}`;
    tag`\055${0}`;
    tag`${0}\0${0}`;
    tag`${0}\5${0}`;
    tag`${0}\00${0}`;
    tag`${0}\05${0}`;
    tag`${0}\55${0}`;
    tag`${0}\000${0}`;
    tag`${0}\005${0}`;
    tag`${0}\055${0}`;
    
    tag`\1`;
    tag`\01`;
    tag`\001`;
    tag`\17`;
    tag`\017`;
    tag`\0017`;
    tag`\177`;
    tag`\18`;
    tag`\018`;
    tag`\0018`;
    tag`\4`;
    tag`\47`;
    tag`\047`;
    tag`\0047`;
    tag`\477`;
    tag`\48`;
    tag`\048`;
    tag`\0048`;
    tag`\8`;
    tag`\87`;
    tag`\087`;
    tag`\0087`;
    tag`\877`;
    tag`\88`;
    tag`\088`;
    tag`\0088`;
    